Fixed layout bug in gallery

--- a/_sass/modules/_layout.scss
+++ b/_sass/modules/_layout.scss
@@ -142,6 +142,10 @@ gallery {
     grid-template-columns:  1fr 1fr 1fr 1fr;
   }
 
+  h2 {
+    grid-column: 1/-1;
+  }
+
 }
 
 
